arm: Add support for stellaris
Add basic support for the stellaris lm3s6965. This support is incomplete, and
clocks, uart not configured so it can work only under qemu.

It is usable on the real stellaris if one use semihosting instead of the uart
for output.

Signed-off-by: Fabien Parent <parent.f@gmail.com>

--- a/arch/arm/Kconfig
+++ b/arch/arm/Kconfig
@@ -26,6 +26,17 @@ config CPU_ARM_CORTEX_M3
     select CPU_ARMV7M
 
 choice
+    prompt "Machine"
+
+    config MACH_STELLARIS
+        bool "TI Stellaris"
+endchoice
+
+if MACH_STELLARIS
+source "arch/$ARCH/mach-stellaris/Kconfig"
+endif
+
+choice
     prompt "Boot Mode"
 
     config BOOT_FLASH
