--- a/arch/arm/mach-stellaris/Makefile
+++ b/arch/arm/mach-stellaris/Makefile
@@ -3,5 +3,4 @@
 #
 # Provided under the three clause BSD license found in the LICENSE file.
 
-subdirs-$(CONFIG_CPU_ARMV7M) += arm-v7m
-subdirs-$(CONFIG_MACH_STELLARIS) += mach-stellaris
+obj-y := lm3s6965-lowio.o
