arm: tsb: add support for toshiba bridges
Add basic code required to boot and compile an image for Toshiba bridges
(aka tsb).

Signed-off-by: Fabien Parent <parent.f@gmail.com>

--- a/arch/arm/Kconfig
+++ b/arch/arm/Kconfig
@@ -34,9 +34,16 @@ config LITTLE_ENDIAN
 choice
     prompt "Machine"
 
+    config MACH_TSB
+        bool "Toshiba Bridge"
+
     config MACH_STELLARIS
         bool "TI Stellaris"
 endchoice
+
+if MACH_TSB
+source "arch/$ARCH/mach-tsb/Kconfig"
+endif
 
 if MACH_STELLARIS
 source "arch/$ARCH/mach-stellaris/Kconfig"
