--- a/arch/arm/Makefile
+++ b/arch/arm/Makefile
@@ -6,3 +6,4 @@
 subdirs-y += common
 subdirs-$(CONFIG_CPU_ARMV7M) += arm-v7m
 subdirs-$(CONFIG_MACH_STELLARIS) += mach-stellaris
+subdirs-$(CONFIG_MACH_TSB) += mach-tsb
