libc: add newlib nano libc
Integrate newlib nano into the generated image.

Signed-off-by: Fabien Parent <parent.f@gmail.com>

--- a/scripts/Makefile
+++ b/scripts/Makefile
@@ -9,9 +9,14 @@ KCONFIG_FRONTENDS_SRC      := $(KCONFIG_FRONTENDS_NAME)-$(KCONFIG_FRONTENDS_VERS
 KCONFIG_FRONTENDS_FILENAME := $(KCONFIG_FRONTENDS_SRC).tar.xz
 KCONFIG_FRONTENDS_URL      := http://ymorin.is-a-geek.org/download/$(KCONFIG_FRONTENDS_NAME)/$(KCONFIG_FRONTENDS_FILENAME)
 
+NEWLIB_REPO_NAME   := newlib-nano
+NEWLIB_REPO_URL    := https://github.com/fabo-corp/$(NEWLIB_REPO_NAME).git
+NEWLIB_REPO_BRANCH := v2.1-arm-clang
+
 distclean:
 	rm -f $(KCONFIG_FRONTENDS_FILENAME)
 	rm -rf $(KCONFIG_FRONTENDS_SRC) $(KCONFIG_FRONTENDS_NAME)
+	rm -rf $(NEWLIB_REPO_NAME) $(KERNEL_ROOT)/libc
 
 kconfig-%: $(KCONFIG_FRONTENDS_FILENAME)
 	echo "    GEN $@"
@@ -44,3 +49,39 @@ kconfig-%: $(KCONFIG_FRONTENDS_FILENAME)
 $(KCONFIG_FRONTENDS_FILENAME):
 	echo "    DL $@"
 	wget $(KCONFIG_FRONTENDS_URL)
+
+$(NEWLIB_REPO_NAME):
+	echo "    DL $@:$(NEWLIB_REPO_BRANCH)"
+	git clone $(NEWLIB_REPO_URL) -b $(NEWLIB_REPO_BRANCH) 2>/dev/null
+
+libc: $(NEWLIB_REPO_NAME)
+	echo "    GEN $@"
+	cd ./$(NEWLIB_REPO_NAME)/newlib; \
+	unset CFLAGS CPPLAGS LDFLAGS MAKEFILES; \
+	CC=$(CC) CFLAGS="$(CFLAGS)" \
+	./configure --build=$(call compiler-triple) \
+	            --prefix=$(KERNEL_ROOT)/libc \
+	            --disable-newlib-supplied-syscalls \
+	            1>./configure.log 2>&1; \
+	if [ $$? -ne 0 ]; \
+	then \
+	    echo "ERROR: configuration of newlibc-nano failed"; \
+	    echo "\tread ./scripts/$(NEWLIB_REPO_NAME)/newlib/configure.log for more details"; \
+	    exit 1; \
+	fi; \
+	make 1>./build.log 2>&1; \
+	if [ $$? -ne 0 ]; \
+	then \
+	    echo "ERROR: compilation of newlibc-nano failed"; \
+	    echo "\tread ./scripts/$(NEWLIB_REPO_NAME)/newlib/build.log for more details"; \
+	    exit 1; \
+	fi; \
+	make install 1>./install.log 2>&1
+	if [ $$? -ne 0 ]; \
+	then \
+	    echo "ERROR: installation of newlibc-nano failed"; \
+	    echo "\tread ./scripts/$(NEWLIB_REPO_NAME)/newlib/install.log for more details"; \
+	    exit 1; \
+	fi; \
+
+compiler-triple = $(subst --,-,$(shell $(CC) $(CFLAGS) -dumpmachine))
