kernel: add kernel main source code
Add kernel main function.

Signed-off-by: Fabien Parent <parent.f@gmail.com>

--- a/kernel/Kconfig
+++ b/kernel/Kconfig
@@ -3,12 +3,6 @@
 #
 # Provided under the three clause BSD license found in the LICENSE file.
 
-mainmenu "phabos kernel configuration"
+menu "Kernel configuration"
 
-config ARCH
-    string
-    option env="ARCH"
-
-source "arch/$ARCH/Kconfig"
-source kernel/Kconfig
-source scripts/Kconfig
+endmenu
