--- a/drivers/i2c/Kconfig
+++ b/drivers/i2c/Kconfig
@@ -3,7 +3,5 @@
 #
 # Provided under the three clause BSD license found in the LICENSE file.
 
-subdirs-$(CONFIG_SERIAL) += serial
-subdirs-$(CONFIG_I2C) += i2c
-
-obj-y += core.o
+config I2C_DW
+    bool "Designware I2C support"
