--- a/drivers/i2c/Makefile
+++ b/drivers/i2c/Makefile
@@ -3,7 +3,4 @@
 #
 # Provided under the three clause BSD license found in the LICENSE file.
 
-subdirs-$(CONFIG_SERIAL) += serial
-subdirs-$(CONFIG_I2C) += i2c
-
-obj-y += core.o
+obj-$(CONFIG_I2C_DW) += dw.o
