--- a/scripts/Makefile.build
+++ b/scripts/Makefile.build
@@ -29,7 +29,7 @@ ifeq (${MAKELEVEL}, 0)
 	endif
 
 	CFLAGS   += -std=gnu11 -Wall -fno-stack-protector -g -fshort-enums \
-	            $(CONFIG_OPTIMIZATION_LEVEL)
+	            $(CONFIG_OPTIMIZATION_LEVEL) -D_POSIX_MONOTONIC_CLOCK
 	CPPFLAGS += -ffreestanding\
 	            -I. \
 	            -Iarch/$(ARCH)/include/ \
