arm-v7m: add scheduler's watchdog support
Implement the watchdog api using the arm-v7m systick.

Signed-off-by: Fabien Parent <parent.f@gmail.com>

--- a/arch/arm/Kconfig
+++ b/arch/arm/Kconfig
@@ -42,6 +42,10 @@ if MACH_STELLARIS
 source "arch/$ARCH/mach-stellaris/Kconfig"
 endif
 
+config ARCH_HAS_SCHEDULER_WATCHDOG
+    bool
+    default y
+
 choice
     prompt "Boot Mode"
 
