--- a/drivers/usb/Kconfig
+++ b/drivers/usb/Kconfig
@@ -3,8 +3,10 @@
 #
 # Provided under the three clause BSD license found in the LICENSE file.
 
-subdirs-$(CONFIG_SERIAL) += serial
-subdirs-$(CONFIG_I2C) += i2c
-subdirs-$(CONFIG_USB) += usb
+config USB_HOST
+    bool "Host support"
+    default y
 
-obj-y += core.o
+config USB_DEVICE
+    bool "Device support"
+    default y
