--- a/drivers/usb/Makefile
+++ b/drivers/usb/Makefile
@@ -3,8 +3,4 @@
 #
 # Provided under the three clause BSD license found in the LICENSE file.
 
-subdirs-$(CONFIG_SERIAL) += serial
-subdirs-$(CONFIG_I2C) += i2c
-subdirs-$(CONFIG_USB) += usb
-
-obj-y += core.o
+subdirs-$(CONFIG_USB_DWC2) += dwc2
