dwc2: port dwc2 driver to phabos

--- a/drivers/usb/Kconfig
+++ b/drivers/usb/Kconfig
@@ -10,3 +10,10 @@ config USB_HOST
 config USB_DEVICE
     bool "Device support"
     default y
+
+menuconfig USB_DWC2
+    bool "Designware USB2 support"
+
+if USB_DWC2
+source drivers/usb/dwc2/Kconfig
+endif
