--- a/arch/arm/Makefile
+++ b/arch/arm/Makefile
@@ -3,5 +3,6 @@
 #
 # Provided under the three clause BSD license found in the LICENSE file.
 
+subdirs-y += common
 subdirs-$(CONFIG_CPU_ARMV7M) += arm-v7m
 subdirs-$(CONFIG_MACH_STELLARIS) += mach-stellaris
