tsb: add bridge config option
Add Kconfig option to select for which board we are compiling for. Add also
the option for the APB2 cpu on BDBs.

Signed-off-by: Fabien Parent <parent.f@gmail.com>

--- a/arch/arm/mach-tsb/Kconfig
+++ b/arch/arm/mach-tsb/Kconfig
@@ -46,6 +46,13 @@ choice
         select MACH_TSB_COMMON
 endchoice
 
+choice
+    prompt "Bridge configuration"
+
+    config TSB_APB2
+        bool "APB2"
+endchoice
+
 config MACH_LINKER_SCRIPT
     string
     default "tsb"
