arm-v7m: add hard fault handler
Add hard fault handler that analyze the cause of the hard fault.

Signed-off-by: Fabien Parent <parent.f@gmail.com>

--- a/arch/arm/arm-v7m/Makefile
+++ b/arch/arm/arm-v7m/Makefile
@@ -11,6 +11,7 @@ obj-y += spinlock.o
 obj-y += atomic.o
 obj-y += scheduler.o
 obj-y += irq-handler.o
+obj-y += error-handling.o
 obj-$(CONFIG_SCHEDULER_WATCHDOG) += watchdog.o
 
 ld-script-y += arm-v7m.ld
