arm: add byte ordering api
Add a byte ordering api for arm.

Signed-off-by: Fabien Parent <parent.f@gmail.com>

--- a/arch/arm/Kconfig
+++ b/arch/arm/Kconfig
@@ -25,6 +25,12 @@ config CPU_ARM_CORTEX_M3
     bool
     select CPU_ARMV7M
 
+config BIG_ENDIAN
+    bool
+
+config LITTLE_ENDIAN
+    bool
+
 choice
     prompt "Machine"
 
