kernel: add syscalls support
Add basic infrastructure in order to support syscalls.

Signed-off-by: Fabien Parent <parent.f@gmail.com>

--- a/kernel/kernel.ld.in
+++ b/kernel/kernel.ld.in
@@ -15,6 +15,12 @@ SECTIONS
         _eshell_command = .;
     } DATA_STORAGE
 
+    .syscall : {
+        _syscall = .;
+        KEEP(*(.syscall))
+        _esyscall = .;
+    } DATA_STORAGE
+
     .heap : {
         _sheap = .;
     } > SRAM
