arm: arm-v7m: add arm-v7m architecture profile support
Add arm v7m profile support.

Signed-off-by: Fabien Parent <parent.f@gmail.com>

--- a/arch/arm/Kconfig
+++ b/arch/arm/Kconfig
@@ -16,6 +16,11 @@ config CPU_ARMV7
 config CPU_ARM_THUMB
     bool
 
+config CPU_ARMV7M
+    bool
+    select CPU_ARMV7
+    select CPU_ARM_THUMB
+
 choice
     prompt "Boot Mode"
 
