--- a/kernel/kernel.ld.in
+++ b/kernel/kernel.ld.in
@@ -9,6 +9,12 @@
 
 SECTIONS
 {
+    .data : {
+        _shell_command = .;
+        KEEP(*(.shell_cmd))
+        _eshell_command = .;
+    } DATA_STORAGE
+
     .heap : {
         _sheap = .;
     } > SRAM
