apps: add application directory

--- a/kernel/kernel.ld.in
+++ b/kernel/kernel.ld.in
@@ -25,6 +25,13 @@ SECTIONS
         _edriver = .;
     } DATA_STORAGE
 
+    .apps : {
+        KEEP(*(.apps))
+        _apps = .;
+        KEEP(*(.apps.table))
+        _eapps = .;
+    } DATA_STORAGE
+
     .heap : {
         _sheap = .;
     } > SRAM
