tty: add tty core driver
Add core tty api which will allow to write tty device drivers.

--- a/drivers/Kconfig
+++ b/drivers/Kconfig
@@ -14,4 +14,11 @@ choice
         depends on ARCH_HAS_SCHEDULER_WATCHDOG
 endchoice
 
+menuconfig SERIAL
+    bool "Serial"
+
+if SERIAL
+source drivers/serial/Kconfig
+endif
+
 endmenu
