--- a/drivers/serial/Kconfig
+++ b/drivers/serial/Kconfig
@@ -1,8 +1,4 @@
-# Copyright (C) 2014-2015 Fabien Parent. All rights reserved.
+# Copyright (C) 2015 Fabien Parent. All rights reserved.
 # Author: Fabien Parent <parent.f@gmail.com>
 #
 # Provided under the three clause BSD license found in the LICENSE file.
-
-subdirs-$(CONFIG_SERIAL) += serial
-
-obj-y += core.o
