--- a/drivers/serial/Makefile
+++ b/drivers/serial/Makefile
@@ -1,8 +1,6 @@
-# Copyright (C) 2014-2015 Fabien Parent. All rights reserved.
+# Copyright (C) 2015 Fabien Parent. All rights reserved.
 # Author: Fabien Parent <parent.f@gmail.com>
 #
 # Provided under the three clause BSD license found in the LICENSE file.
 
-subdirs-$(CONFIG_SERIAL) += serial
-
-obj-y += core.o
+obj-y += tty.o
