arm-v7m: add mpu support
Add driver for the MPU optionally included in Cortex-M devices.

Signed-off-by: Fabien Parent <parent.f@gmail.com>

--- a/arch/arm/Kconfig
+++ b/arch/arm/Kconfig
@@ -66,6 +66,10 @@ choice
         bool "boot from ram"
 endchoice
 
+if CPU_ARMV7M
+source "arch/$ARCH/arm-v7m/Kconfig"
+endif
+
 source "arch/$ARCH/common/Kconfig"
 
 endmenu
