arm-v7m: map a 'no access' region at addr 0x0
Map a 32 bytes region at offset 0 with no access permission in order to
catch any NULL ptr dereference.

Signed-off-by: Fabien Parent <parent.f@gmail.com>

--- a/arch/arm/arm-v7m/Kconfig
+++ b/arch/arm/arm-v7m/Kconfig
@@ -1,4 +1,11 @@
-config MPU
+menuconfig MPU
     bool "MPU Support"
     depends on CPU_ARMV7M
     default y
+
+if MPU
+config MPU_NULL_REGION
+    bool "Configure No-Access region at address 0x0"
+    depends on MPU
+    default y
+endif
