build system: remove dead code at link time
Remove all the function that are not called and all the data not used from
the binary at link time.

Signed-off-by: Fabien Parent <parent.f@gmail.com>

--- a/scripts/Makefile.build
+++ b/scripts/Makefile.build
@@ -29,13 +29,14 @@ ifeq (${MAKELEVEL}, 0)
 	endif
 
 	CFLAGS   += -std=gnu11 -Wall -fno-stack-protector -g -fshort-enums \
+	            -fdata-sections -ffunction-sections \
 	            $(CONFIG_OPTIMIZATION_LEVEL) -D_POSIX_MONOTONIC_CLOCK
 	CPPFLAGS += -ffreestanding\
 	            -I. \
 	            -Iarch/$(ARCH)/include/ \
 	            -Ilibc/include/ \
 	            -Iinclude/
-	LDFLAGS  += -nostartfiles -nostdlib
+	LDFLAGS  += -nostartfiles -nostdlib -gc-sections
 endif
 
 build = echo "    $1 $@"
