arm-v7m: update linker script for the removing of dead code
Update linker to merge subsection, i.e. merge .X.Y into section .X, and add
KEEP keyword for section that we want to keep (e.g. boot code).

Signed-off-by: Fabien Parent <parent.f@gmail.com>

--- a/arch/arm/arm-v7m/arm-v7m.ld.in
+++ b/arch/arm/arm-v7m/arm-v7m.ld.in
@@ -15,7 +15,7 @@ SECTIONS
     } BOOT_STORAGE
 
     .boot : {
-        *(.boot)
+        KEEP(*(.boot))
     } BOOT_STORAGE
 
     .bss : {
@@ -26,6 +26,7 @@ SECTIONS
 
     .text : {
         *(.text)
+        *(.text.*)
         *(.rodata*)
     } CODE_STORAGE
 
@@ -43,6 +44,7 @@ SECTIONS
 
     .data : {
         *(.data)
+        *(.data.*)
     } DATA_STORAGE
 
     _data_lma = LOADADDR(.data);
