--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -4,6 +4,7 @@
 # Provided under the three clause BSD license found in the LICENSE file.
 
 obj-y := main.o
+obj-y += mm.o
 obj-y += libc-support.o
 obj-y += shell.o
 obj-y += scheduler.o
