gpio: add gpio infrastructure
Signed-off-by: Fabien Parent <parent.f@gmail.com>

--- a/drivers/Kconfig
+++ b/drivers/Kconfig
@@ -42,4 +42,11 @@ if USB
 source drivers/usb/Kconfig
 endif
 
+menuconfig GPIO
+    bool "GPIO"
+
+if GPIO
+source drivers/gpio/Kconfig
+endif
+
 endmenu
