--- a/drivers/gpio/Makefile
+++ b/drivers/gpio/Makefile
@@ -4,3 +4,4 @@
 # Provided under the three clause BSD license found in the LICENSE file.
 
 obj-$(CONFIG_GPIO) += core.o
+obj-$(CONFIG_TCA6408) += tca6408.o
