--- a/kernel/Kconfig
+++ b/kernel/Kconfig
@@ -9,10 +9,18 @@ menu "Scheduler"
     config SCHED_RR
         bool "SCHED_RR scheduling policy"
 
+    config SCHED_FIFO
+        bool "SCHED_FIFO scheduling policy"
+
     config SCHED_NUM_RR_PRIORITIES
         int "Number of available SCHED_RR priorities"
         default 32
         depends on SCHED_RR
+
+    config SCHED_NUM_FIFO_PRIORITIES
+        int "Number of available SCHED_FIFO priorities"
+        default 32
+        depends on SCHED_FIFO
 
     choice
         prompt "Scheduler default policy"
@@ -21,6 +29,10 @@ menu "Scheduler"
         config SCHED_DEFAULT_POLICY_RR
             bool "SCHED_RR"
             depends on SCHED_RR
+
+        config SCHED_DEFAULT_POLICY_FIFO
+            bool "SCHED_FIFO"
+            depends on SCHED_FIFO
     endchoice
 endmenu
 
