--- a/kernel/Kconfig
+++ b/kernel/Kconfig
@@ -5,6 +5,9 @@
 
 menu "Kernel configuration"
 
+config TICKLESS
+    bool "Tickless"
+
 menu "Scheduler"
     config SCHED_RR
         bool "SCHED_RR scheduling policy"
