--- a/drivers/serial/Kconfig
+++ b/drivers/serial/Kconfig
@@ -7,7 +7,15 @@ menuconfig UART16550
     bool "UART 16550"
 
 if UART16550
+config UART16550_FIFO_DEPTH
+    int "FIFO Depth"
+    default 16
+
 config UART16550_RX_BUFFER_SIZE
     int "RX Buffer Size"
+    default "64"
+
+config UART16550_TX_BUFFER_SIZE
+    int "TX Buffer Size"
     default "64"
 endif
