tsb: add cdsi driver
Signed-off-by: Fabien Parent <parent.f@gmail.com>

--- a/arch/arm/mach-tsb/Kconfig
+++ b/arch/arm/mach-tsb/Kconfig
@@ -78,3 +78,7 @@ config TSB_UNIPRO
     bool "TSB UniPro"
     depends on UNIPRO
     default y
+
+config TSB_CDSI
+    bool "TSB CDSI"
+    default y
