--- a/arch/arm/mach-tsb/Makefile
+++ b/arch/arm/mach-tsb/Makefile
@@ -28,6 +28,7 @@ obj-y += lowio.o
 obj-y += scm.o
 obj-$(CONFIG_TSB_BOARD_BDB) += board-bdb.o
 obj-$(CONFIG_TSB_GPIO) += gpio.o
+obj-$(CONFIG_TSB_CDSI) += cdsi.o
 
 ifeq ($(CONFIG_TSB_ES2),y)
 obj-$(CONFIG_TSB_UNIPRO) += es2-mphy-fixups.o
