greybus: add vibrator class driver

--- a/drivers/greybus/Makefile
+++ b/drivers/greybus/Makefile
@@ -29,3 +29,4 @@ obj-y += greybus-unipro.o
 obj-$(CONFIG_GREYBUS_GPIO) += gpio.o
 obj-$(CONFIG_GREYBUS_I2C) += i2c.o
 obj-$(CONFIG_GREYBUS_BATTERY) += battery.o
+obj-$(CONFIG_GREYBUS_VIBRATOR) += vibrator.o
