--- a/drivers/greybus/Makefile
+++ b/drivers/greybus/Makefile
@@ -30,3 +30,4 @@ obj-$(CONFIG_GREYBUS_GPIO) += gpio.o
 obj-$(CONFIG_GREYBUS_I2C) += i2c.o
 obj-$(CONFIG_GREYBUS_BATTERY) += battery.o
 obj-$(CONFIG_GREYBUS_VIBRATOR) += vibrator.o
+obj-$(CONFIG_GREYBUS_LOOPBACK) += loopback.o
