--- a/arch/arm/mach-tsb/Makefile
+++ b/arch/arm/mach-tsb/Makefile
@@ -32,6 +32,7 @@ obj-$(CONFIG_TSB_CDSI) += cdsi.o
 obj-$(CONFIG_ARA_BACKPORT) += driver.o
 obj-$(CONFIG_ARA_BACKPORT) += device-table.o
 obj-$(CONFIG_TSB_PLL) += pll.o
+obj-$(CONFIG_TSB_I2S) += i2s.o
 
 ifeq ($(CONFIG_TSB_ES2),y)
 obj-$(CONFIG_TSB_UNIPRO) += es2-mphy-fixups.o
