usb: add usb host support

--- a/drivers/usb/Makefile
+++ b/drivers/usb/Makefile
@@ -3,4 +3,5 @@
 #
 # Provided under the three clause BSD license found in the LICENSE file.
 
+subdirs-$(CONFIG_USB_HOST) += host
 subdirs-$(CONFIG_USB_DWC2) += dwc2
