build: don't run gc at link in debug config
In order to catch undefined symbols, don't run the gc collector at link time
in order to catch ALL undefined symbols.

Signed-off-by: Fabien Parent <parent.f@gmail.com>

--- a/scripts/Makefile.build
+++ b/scripts/Makefile.build
@@ -36,7 +36,10 @@ ifeq (${MAKELEVEL}, 0)
 	            -Iarch/$(ARCH)/include/ \
 	            -Ilibc/include/ \
 	            -Iinclude/
-	LDFLAGS  += -nostartfiles -nostdlib -gc-sections
+	LDFLAGS  += -nostartfiles -nostdlib
+	ifndef CONFIG_DEBUG
+		LDFLAGS += -gc-sections
+	endif
 endif
 
 build = echo "    $1 $@"
