--- a/drivers/greybus/Makefile
+++ b/drivers/greybus/Makefile
@@ -25,7 +25,7 @@
 # ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
 obj-y += greybus-core.o
-obj-y += greybus-unipro.o
+obj-y += greybus-usb.o
 obj-$(CONFIG_GREYBUS_GPIO) += gpio.o
 obj-$(CONFIG_GREYBUS_I2C) += i2c.o
 obj-$(CONFIG_GREYBUS_I2S) += i2s.o
