apps: i2s: port i2s app

--- a/apps/Makefile
+++ b/apps/Makefile
@@ -2,3 +2,4 @@ subdirs-$(CONFIG_MACH_TSB) += tsb
 
 obj-$(CONFIG_UNIPRO) += unipro.o
 obj-$(CONFIG_GPIO) += gpio.o
+obj-$(CONFIG_ARA_BACKPORT) += i2s.o
