--- a/apps/Makefile
+++ b/apps/Makefile
@@ -3,3 +3,4 @@ subdirs-$(CONFIG_MACH_TSB) += tsb
 obj-$(CONFIG_UNIPRO) += unipro.o
 obj-$(CONFIG_GPIO) += gpio.o
 obj-$(CONFIG_ARA_BACKPORT) += i2s.o
+obj-$(CONFIG_GREYBUS_LOOPBACK) += gb-loopback.o
