--- a/drivers/greybus/Makefile
+++ b/drivers/greybus/Makefile
@@ -29,3 +29,4 @@ subdirs-$(CONFIG_GREYBUS_AP) += ap
 
 obj-y += greybus-core.o
 obj-$(CONFIG_GREYBUS_UNIPRO) += greybus-unipro.o
+obj-$(CONFIG_GREYBUS_USB) += greybus-usb.o
