apps: add apbridgea app

--- a/apps/Makefile
+++ b/apps/Makefile
@@ -1,4 +1,5 @@
 subdirs-$(CONFIG_MACH_TSB) += tsb
+subdirs-$(CONFIG_TSB_APB1) += apbridgea
 
 obj-$(CONFIG_UNIPRO) += unipro.o
 obj-$(CONFIG_GPIO) += gpio.o
