--- a/apps/Makefile
+++ b/apps/Makefile
@@ -1,5 +1,6 @@
 subdirs-$(CONFIG_MACH_TSB) += tsb
 subdirs-$(CONFIG_TSB_APB1) += apbridgea
+#subdirs-y += svc
 
 obj-$(CONFIG_UNIPRO) += unipro.o
 obj-$(CONFIG_GPIO) += gpio.o
