--- a/arch/arm/Makefile
+++ b/arch/arm/Makefile
@@ -7,3 +7,4 @@ subdirs-y += common
 subdirs-$(CONFIG_CPU_ARMV7M) += arm-v7m
 subdirs-$(CONFIG_MACH_STELLARIS) += mach-stellaris
 subdirs-$(CONFIG_MACH_TSB) += mach-tsb
+subdirs-$(CONFIG_MACH_STM32) += mach-stm32
