--- a/apps/svc/Makefile
+++ b/apps/svc/Makefile
@@ -4,10 +4,11 @@ obj-y += vreg.o
 obj-y += interface.o
 obj-y += up_debug.o
 obj-y += tsb_switch.o
+obj-y += svc.o
 obj-y += tsb_switch_es1.o
-#obj-y += up_spring_pm.o
+obj-y += board-bdb1b.o
 
-#CSRCS		= up_boot.c svc.c
+#CSRCS		= up_boot.c
 #CSRCS		+= tsb_switch_es1.c
 #CSRCS		+= tsb_switch_es2.c
 
