--- a/drivers/i2c/Makefile
+++ b/drivers/i2c/Makefile
@@ -3,4 +3,6 @@
 #
 # Provided under the three clause BSD license found in the LICENSE file.
 
+obj-y += core.o
 obj-$(CONFIG_I2C_DW) += dw.o
+obj-$(CONFIG_STM32_I2C) += stm32-i2c.o
