--- a/scripts/Makefile.build
+++ b/scripts/Makefile.build
@@ -36,8 +36,7 @@ ifeq (${MAKELEVEL}, 0)
 	            -Iarch/$(ARCH)/include/ \
 	            -Ilibc/$(ARCH_ID)/include/ \
 	            -Iinclude/
-	LDFLAGS  += -nostartfiles -nostdlib \
-	            --wrap=_malloc_r --wrap=_free_r --wrap=_realloc_r
+	LDFLAGS  += -nostartfiles -nostdlib
 	ifndef CONFIG_DEBUG
 		LDFLAGS += -gc-sections
 	endif
