stm32: bdb1b: desactive semihosting in order to be able to run from flash

--- a/arch/arm/configs/bdb1b-svc_defconfig
+++ b/arch/arm/configs/bdb1b-svc_defconfig
@@ -22,13 +22,12 @@ CONFIG_STM32F4=y
 CONFIG_STM32F417XX=y
 CONFIG_BOARD_ARA_SVC=y
 CONFIG_ARCH_HAS_SCHEDULER_WATCHDOG=y
-# CONFIG_BOOT_FLASH is not set
+CONFIG_BOOT_FLASH=y
 # CONFIG_BOOT_COPYTORAM is not set
-CONFIG_BOOT_RAM=y
+# CONFIG_BOOT_RAM is not set
 CONFIG_MPU=y
 CONFIG_MPU_NULL_REGION=y
-CONFIG_ARM_SEMIHOSTING=y
-# CONFIG_ARM_SEMIHOSTING_LOWIO is not set
+# CONFIG_ARM_SEMIHOSTING is not set
 
 #
 # Kernel configuration
