shell: move shell to apps folder

--- a/apps/Makefile
+++ b/apps/Makefile
@@ -3,6 +3,7 @@ subdirs-$(CONFIG_APP_APBRIDGEA) += apbridgea
 subdirs-$(CONFIG_APP_SVC) += svc
 subdirs-$(CONFIG_APP_GREYBUS_UTILS) += greybus-utils
 
+obj-y += shell.o
 obj-$(CONFIG_APP_UNIPRO) += unipro.o
 obj-$(CONFIG_APP_GPIO) += gpio.o
 obj-$(CONFIG_APP_I2S) += i2s.o
