--- a/arch/arm/mach-stm32/Makefile
+++ b/arch/arm/mach-stm32/Makefile
@@ -4,6 +4,7 @@
 # Provided under the three clause BSD license found in the LICENSE file.
 
 obj-y += stm32f4-lowio.o
-obj-y += board-bdb1b.o
+obj-$(CONFIG_BOARD_ARA_SVC_BDB1B) += board-bdb1b.o
+obj-$(CONFIG_BOARD_ARA_SVC_BDB2) += board-bdb2.o
 obj-y += gpio.o
 obj-y += rcc.o
