bdb1b: fix bridge defconfig

--- a/arch/arm/configs/bdb1b-bridge_defconfig
+++ b/arch/arm/configs/bdb1b-bridge_defconfig
@@ -35,8 +35,7 @@ CONFIG_ARCH_HAS_SCHEDULER_WATCHDOG=y
 CONFIG_BOOT_RAM=y
 CONFIG_MPU=y
 CONFIG_MPU_NULL_REGION=y
-CONFIG_ARM_SEMIHOSTING=y
-# CONFIG_ARM_SEMIHOSTING_LOWIO is not set
+# CONFIG_ARM_SEMIHOSTING is not set
 
 #
 # Kernel configuration
@@ -93,6 +92,7 @@ CONFIG_GREYBUS_VIBRATOR=y
 # CONFIG_GREYBUS_LOOPBACK is not set
 CONFIG_GREYBUS_CONTROL=y
 # CONFIG_ARA_BACKPORT is not set
+# CONFIG_SPI is not set
 
 #
 # Filesystem
@@ -115,8 +115,7 @@ CONFIG_OPTIMIZATION_LEVEL="-Os"
 #
 # Applications
 #
-CONFIG_APP_GREYBUS_UTILS=y
-CONFIG_APP_APBRIDGEA=y
+# CONFIG_APP_APBRIDGEA is not set
 CONFIG_APP_GPIO=y
 # CONFIG_APP_GB_LOOPBACK is not set
 # CONFIG_APP_I2S is not set
