--- a/drivers/usb/dwc2/Kconfig
+++ b/drivers/usb/dwc2/Kconfig
@@ -24,5 +24,9 @@
 # OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
 # ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
+config USB_DWC2_QUIET
+    bool "Disable DWC2 printf output"
+
 config USB_DWC2_DEBUG
     bool "Enable debugging"
+    depends on !USB_DWC2_QUIET
