arm: don't inline delay functions

--- a/arch/arm/common/Makefile
+++ b/arch/arm/common/Makefile
@@ -3,5 +3,6 @@
 #
 # Provided under the three clause BSD license found in the LICENSE file.
 
+obj-y += delay.o
 obj-y += lowio.o
 obj-$(CONFIG_ARM_SEMIHOSTING) += semihosting.o
