--- a/drivers/usb/host/Makefile
+++ b/drivers/usb/host/Makefile
@@ -1,6 +1,6 @@
 obj-$(CONFIG_USB_CORE) += core.o
 obj-$(CONFIG_USB_CORE) += hub.o
-obj-$(CONFIG_USB_CORE) += generic.o
+#obj-$(CONFIG_USB_CORE) += generic.o
 obj-$(CONFIG_USB_DWC2) += hcd-dwc2.o
 
 ifeq ($(CONFIG_USB_DWC2),y)
