--- a/apps/svc/Makefile
+++ b/apps/svc/Makefile
@@ -10,17 +10,10 @@ obj-y += svc.o
 obj-y += tsb_switch_es1.o
 obj-y += tsb_switch_es2.o
 obj-y += up_bdb_pm.o
+obj-y += unipro_svc.o
+obj-y += gb_svc.o
 
 obj-$(CONFIG_BOARD_ARA_SVC_BDB1B) += board-bdb1b.o
 obj-$(CONFIG_BOARD_ARA_SVC_BDB2) += board-bdb2a.o
 
 CFLAGS += -Iapps/greybus-utils
-
-#ifeq ($(CONFIG_ARCH_BOARD_ARA_BDB1B_SVC),y)
-#CSRCS       += up_adc.c up_spring_pm.c
-#endif
-
-#ifeq ($(CONFIG_ARCH_BOARD_ARA_BDB2A_SVC),y)
-#CSRCS       += up_adc.c up_spring_pm.c
-#endif
-
